ordre apparition des references

--- a/manuscrit_G_LEFEBVRE/annexe_penalisation.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_penalisation.tex
@@ -217,15 +217,15 @@ et son allure est présentée sur la Figure~\ref{fig:regul_para_coupee}.
 \hspace{\retraittableau} %%% Le tableau depasse sur les marges !
 \begin{tabular}{|c|c|c|c|c|}
 \hline
-\rowcolor{gray!70}
-& \multicolumn{4}{c|}{ \cellcolor{gray!70} \bfseries  Algorithme d'optimisation} \\
-\hhline{|>{\arrayrulecolor{gray!70}}->{\arrayrulecolor{black}}|-|-|-|-|}
-\rowcolor{gray!70}
+\rowcolor{\grisfonce}
+& \multicolumn{4}{c|}{ \cellcolor{\grisfonce} \bfseries  Algorithme d'optimisation} \\
+\hhline{|>{\arrayrulecolor{\grisfonce}}->{\arrayrulecolor{black}}|-|-|-|-|}
+\rowcolor{\grisfonce}
 & \bfseries SLSQP
 & \bfseries GC 
 & \bfseries Neldear-Mead 
 & \bfseries BFGS \\
-\rowcolor{gray!70}
+\rowcolor{\grisfonce}
 \multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Scanners choisis pour l'optimisation}
 & $\tau_N, \qquad \tau_P$
 & $\tau_N, \qquad \tau_P$
@@ -235,7 +235,7 @@ et son allure est présentée sur la Figure~\ref{fig:regul_para_coupee}.
 \scan=scan,\NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG,
 \errNM=errNM,\errBFGS=errBFGS,\errcol=errSLSQP,\errCG=errCG}{%
 \\
-\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 \scan & \begin{tabular}{c}
 \col \\ Err : \errcol
 \end{tabular} & \begin{tabular}{c}
@@ -248,7 +248,7 @@ et son allure est présentée sur la Figure~\ref{fig:regul_para_coupee}.
 }%
 %\DTLforeach*{optim2_2stat}{%
 %\NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG}{%
-%\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+%\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 %Moyenne : & \col & \CG & \NM & \BFGS  }
 \\ \hline
 \end{tabular}
@@ -293,15 +293,15 @@ Ici la pénalisation intervient sur un intervalle légèrement plus court que~$[
 \hspace{\retraittableau} %%% Le tableau depasse sur les marges !
 \begin{tabular}{|c|c|c|c|c|}
 \hline
-\rowcolor{gray!70}
-& \multicolumn{4}{c|}{ \cellcolor{gray!70} \bfseries  Algorithme d'optimisation} \\
-\hhline{|>{\arrayrulecolor{gray!70}}->{\arrayrulecolor{black}}|-|-|-|-|}
-\rowcolor{gray!70}
+\rowcolor{\grisfonce}
+& \multicolumn{4}{c|}{ \cellcolor{\grisfonce} \bfseries  Algorithme d'optimisation} \\
+\hhline{|>{\arrayrulecolor{\grisfonce}}->{\arrayrulecolor{black}}|-|-|-|-|}
+\rowcolor{\grisfonce}
 & \bfseries SLSQP
 & \bfseries GC 
 & \bfseries Neldear-Mead 
 & \bfseries BFGS \\
-\rowcolor{gray!70}
+\rowcolor{\grisfonce}
 \multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Scanners choisis pour l'optimisation}
 & $\tau_N, \qquad \tau_P$
 & $\tau_N, \qquad \tau_P$
@@ -311,7 +311,7 @@ Ici la pénalisation intervient sur un intervalle légèrement plus court que~$[
 \scan=scan,\NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG,
 \errNM=errNM,\errBFGS=errBFGS,\errcol=errSLSQP,\errCG=errCG}{%
 \\
-\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 \scan & \begin{tabular}{c}
 \col \\ Err : \errcol
 \end{tabular} & \begin{tabular}{c}
@@ -324,7 +324,7 @@ Ici la pénalisation intervient sur un intervalle légèrement plus court que~$[
 }%
 %\DTLforeach*{optim2_stat}{%
 %\NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG}{%
-%\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+%\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 %Moyenne : & \col & \CG & \NM & \BFGS  }
 \\ \hline
 \end{tabular}
