--- a/manuscrit_G_LEFEBVRE/biblio.bib
+++ b/manuscrit_G_LEFEBVRE/biblio.bib
@@ -219,9 +219,12 @@ pdf = {http://hal.inria.fr/inria-00267292/PDF/paper.pdf},
   journal={Journal of mathematical biology},
   volume={58},
   number={4-5},
+  doi={10.1007/s00285-008-0219-6},
+  url={http://dx.doi.org/10.1007/s00285-008-0219-6},
   pages={561--578},
   year={2009},
-  publisher={Springer}
+  publisher={Springer},
+  issn={0303-6812}
 }
 
 @article{choi2007correlation,
@@ -524,7 +527,7 @@ url = "http://www.ncbi.nlm.nih.gov/pubmed/23393201",
 author = "Gerlee, P."
 }
 
-@article{Alarcon2003,
+@article{alarcon2003cellular,
 title = "A cellular automaton model for tumour growth in inhomogeneous environment ",
 journal = "Journal of Theoretical Biology ",
 volume = "225",
@@ -535,14 +538,15 @@ note = "",
 issn = "0022-5193",
 doi = "http://dx.doi.org/10.1016/S0022-5193(03)00244-3",
 url = "http://www.sciencedirect.com/science/article/pii/S0022519303002443",
-author = "Alarcón, T. and  Byrne, H.M. and  Maini, P.K.",
+author = "T. Alarcón and H.M. Byrne and P.K. Maini",
 keywords = "Tumour growth",
 keywords = "Blood flow",
 keywords = "Heterogeneity",
-keywords = "Cellular automaton "
+keywords = "Cellular automaton"
 }
 
-@article{Drasdo2003,
+
+@article{drasdo2003individual,
 title = "Individual-based approaches to birth and death in avascular tumors ",
 journal = "Mathematical and Computer Modelling ",
 volume = "37",
@@ -561,58 +565,6 @@ keywords = "Off-lattice approach",
 keywords = "Quantitative comparison "
 }
 
-@article{Swanson,
-year={2009},
-issn={0303-6812},
-journal={Journal of Mathematical Biology},
-volume={58},
-number={4-5},
-doi={10.1007/s00285-008-0219-6},
-title={A mathematical model for brain tumor response to radiation therapy},
-url={http://dx.doi.org/10.1007/s00285-008-0219-6},
-publisher={Springer-Verlag},
-keywords={Modeling; Radiation therapy; Glioma; Linear-quadratic; Tumor response; Treatment fractionation; 92B05},
-author={Rockne, R. and Alvord, E.C., Jr. and Rockhill, J.K. and Swanson, K.R.},
-pages={561-578},
-language={English}
-}
-
-@article{MANSURY2002,
-title = "Emerging Patterns in Tumor Systems: Simulating the Dynamics of Multicellular Clusters with an Agent-based Spatial Agglomeration Model ",
-journal = "Journal of Theoretical Biology ",
-volume = "219",
-number = "3",
-pages = "343 - 370",
-year = "2002",
-note = "",
-issn = "0022-5193",
-doi = "http://dx.doi.org/10.1006/jtbi.2002.3131",
-url = "http://www.sciencedirect.com/science/article/pii/S0022519302931310",
-author = "Mansury, Y. and Kimura, M. and Lobo, J. and Deisboeck, T.S."
-}
-
-@article{alarcon2003cellular,
-  title={A cellular automaton model for tumour growth in inhomogeneous environment},
-  author={Alarc{\'o}n, Tom{\'a}s and Byrne, Helen M and Maini, Philip K},
-  journal={Journal of Theoretical Biology},
-  volume={225},
-  number={2},
-  pages={257--274},
-  year={2003},
-  publisher={Elsevier}
-}
-
-@article{drasdo2003individual,
-  title={Individual-based approaches to birth and death in avascu1ar tumors},
-  author={Drasdo, D and H{\"o}hme, S},
-  journal={Mathematical and Computer Modelling},
-  volume={37},
-  number={11},
-  pages={1163--1175},
-  year={2003},
-  publisher={Elsevier}
-}
-
 @article{dematteo2000,
 title={Two hundred gastrointestinal stromal tumors: recurrence patterns and prognostic factors for survival},
 author={DeMatteo, Ronald P and Lewis, Jonathan J and Leung, Denis and Mudan, Satvinder S and Woodruff, James M and Brennan, Murray F},
@@ -623,21 +575,6 @@ pages={51},
 year={2000},
 publisher={Lippincott and  Williams and Wilkins},
 url={http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1420965/}
-}
-
-@article{perthame2013,
-author = {Lorz, A. and Lorenzi,T. and Hochberg ,M.E. and Clairambault, J. and Perthame,B.},
-title = {Populational adaptive evolution, chemotherapeutic resistance and multiple anti-cancer therapies},
-journal = {ESAIM: Mathematical Modelling and Numerical Analysis},
-volume = {47},
-issue = {02},
-month = {3},
-year = {2013},
-issn = {1290-3841},
-pages = {377--399},
-numpages = {23},
-doi = {10.1051/m2an/2012031},
-URL = {http://www.esaim-m2an.org/article_S0764583X12000313},
 }
 
 @article{lorz2013,
@@ -942,7 +879,7 @@ urldate = {20/07/2015}
   title={Genetic algorithms and simulated annealing},
   author={Davis, Lawrence},
   year={1987},
-  publisher={Morgan Kaufman Publishers, Inc., Los Altos, CA}
+  publisher={Morgan Kaufman Publishers}
 }
 
 @article{gottlieb2006fifth,
