--- a/manuscrit_G_LEFEBVRE/chap_optim_grey.tex
+++ b/manuscrit_G_LEFEBVRE/chap_optim_grey.tex
@@ -88,15 +88,15 @@ Une pénalisation en créneau sera considérée ici
 %\begin{tabular}{|c|c|c|c|c|}
 %\hline
 %%%\hhline{|>{\arrayrulecolor{white}}->{\arrayrulecolor{black}}|-|-|}
-%\rowcolor{gray!70}
-%& \multicolumn{4}{c|}{ \cellcolor{gray!70} \bfseries  Algorithme d'optimisation} \\
-%\hhline{|>{\arrayrulecolor{gray!70}}->{\arrayrulecolor{black}}|-|-|-|-|}
-%\rowcolor{gray!70}
+%\rowcolor{\grisfonce}
+%& \multicolumn{4}{c|}{ \cellcolor{\grisfonce} \bfseries  Algorithme d'optimisation} \\
+%\hhline{|>{\arrayrulecolor{\grisfonce}}->{\arrayrulecolor{black}}|-|-|-|-|}
+%\rowcolor{\grisfonce}
 %& \bfseries SLSQP
 %& \bfseries GC 
 %& \bfseries Neldear-Mead 
 %& \bfseries BFGS \\
-%\rowcolor{gray!70}
+%\rowcolor{\grisfonce}
 %\multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Scanners choisis pour l'optimisation}
 %& $\tau_N, \qquad \tau_P, \qquad \tau_S$
 %& $\tau_N, \qquad \tau_P, \qquad \tau_S$
@@ -108,7 +108,7 @@ Une pénalisation en créneau sera considérée ici
 %\scan=scan,\NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG,
 %\errNM=errNM,\errBFGS=errBFGS,\errcol=errSLSQP,\errCG=errCG}{%
 %\\
-%\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+%\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 %\scan & \begin{tabular}{c}
 %\col \\ \errcol
 %\end{tabular} & \begin{tabular}{c}
@@ -121,7 +121,7 @@ Une pénalisation en créneau sera considérée ici
 %}%
 %\DTLforeach*{optim3_0stat}{%
 %\NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG}{%
-%\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+%\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 %Moyenne : & \col & \CG & \NM & \BFGS  }
 %\\ \hline
 %\end{tabular}
@@ -146,15 +146,15 @@ Une pénalisation en créneau sera considérée ici
 %\begin{tabular}{|c|c|c|c|c|}
 %\hline
 %%%\hhline{|>{\arrayrulecolor{white}}->{\arrayrulecolor{black}}|-|-|}
-%\rowcolor{gray!70}
-%& \multicolumn{4}{c|}{ \cellcolor{gray!70} \bfseries  Algorithme d'optimisation} \\
-%\hhline{|>{\arrayrulecolor{gray!70}}->{\arrayrulecolor{black}}|-|-|-|-|}
-%\rowcolor{gray!70}
+%\rowcolor{\grisfonce}
+%& \multicolumn{4}{c|}{ \cellcolor{\grisfonce} \bfseries  Algorithme d'optimisation} \\
+%\hhline{|>{\arrayrulecolor{\grisfonce}}->{\arrayrulecolor{black}}|-|-|-|-|}
+%\rowcolor{\grisfonce}
 %& \bfseries SLSQP
 %& \bfseries GC 
 %& \bfseries Neldear-Mead 
 %& \bfseries BFGS \\
-%\rowcolor{gray!70}
+%\rowcolor{\grisfonce}
 %\multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Scanners choisis pour l'optimisation}
 %& $\tau_N, \qquad \tau_P, \qquad \tau_S$
 %& $\tau_N, \qquad \tau_P, \qquad \tau_S$
@@ -166,7 +166,7 @@ Une pénalisation en créneau sera considérée ici
 %\scan=scan,\NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG,
 %\errNM=errNM,\errBFGS=errBFGS,\errcol=errSLSQP,\errCG=errCG}{%
 %\\
-%\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+%\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 %\scan & \begin{tabular}{c}
 %\col \\ \errcol
 %\end{tabular} & \begin{tabular}{c}
@@ -179,7 +179,7 @@ Une pénalisation en créneau sera considérée ici
 %}%
 %\DTLforeach*{optim3_0stat}{%
 %\NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG}{%
-%\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+%\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 %Moyenne : & \col & \CG & \NM & \BFGS  }
 %\\ \hline
 %\end{tabular}
@@ -194,15 +194,15 @@ Une pénalisation en créneau sera considérée ici
 \begin{tabular}{|c|cc|cc|cc|cc|}
 \hline
 %%\hhline{|>{\arrayrulecolor{white}}->{\arrayrulecolor{black}}|-|-|}
-\rowcolor{gray!70}
-& \multicolumn{8}{c|}{ \cellcolor{gray!70} \bfseries  Algorithme d'optimisation} \\
-\hhline{|>{\arrayrulecolor{gray!70}}->{\arrayrulecolor{black}}|--|--|--|--|}
-\rowcolor{gray!70}
-& \multicolumn{2}{|c|}{\cellcolor{gray!70} \bfseries SLSQP }
-& \multicolumn{2}{c|}{ \cellcolor{gray!70} \bfseries GC }
-& \multicolumn{2}{c|}{ \cellcolor{gray!70} \bfseries Neldear-Mead }
-& \multicolumn{2}{c|}{\cellcolor{gray!70}  \bfseries BFGS } \\
-\rowcolor{gray!70}
+\rowcolor{\grisfonce}
+& \multicolumn{8}{c|}{ \cellcolor{\grisfonce} \bfseries  Algorithme d'optimisation} \\
+\hhline{|>{\arrayrulecolor{\grisfonce}}->{\arrayrulecolor{black}}|--|--|--|--|}
+\rowcolor{\grisfonce}
+& \multicolumn{2}{|c|}{\cellcolor{\grisfonce} \bfseries SLSQP }
+& \multicolumn{2}{c|}{ \cellcolor{\grisfonce} \bfseries GC }
+& \multicolumn{2}{c|}{ \cellcolor{\grisfonce} \bfseries Neldear-Mead }
+& \multicolumn{2}{c|}{\cellcolor{\grisfonce}  \bfseries BFGS } \\
+\rowcolor{\grisfonce}
 \multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Scanners choisis pour l'optimisation}
 & $\tau_N, \qquad \tau_P, \qquad \tau_S $& Erreur
 & $\tau_N, \qquad \tau_P, \qquad \tau_S $& Erreur
@@ -214,7 +214,8 @@ Une pénalisation en créneau sera considérée ici
 \scan=scan,\NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG,
 \errNM=errNM,\errBFGS=errBFGS,\errcol=errSLSQP,\errCG=errCG}{%
 \\
-\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+%\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
+\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 \scan & 
 \col &\errcol
 &
@@ -226,7 +227,7 @@ Une pénalisation en créneau sera considérée ici
 }%
 \DTLforeach*{optim3_0stat}{%
 \NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG}{%
-\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 Moyenne : & \col && \CG && \NM && \BFGS &  }
 \\ \hline
 \end{tabular}
@@ -316,15 +317,15 @@ Pour essayer de pallier aux problèmes rencontrés dans la section précédente,
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 %%\hhline{|>{\arrayrulecolor{white}}->{\arrayrulecolor{black}}|-|-|}
-\rowcolor{gray!70}
-& \multicolumn{4}{c|}{ \cellcolor{gray!70} \bfseries  Algorithme d'optimisation} \\
-\hhline{|>{\arrayrulecolor{gray!70}}->{\arrayrulecolor{black}}|-|-|-|-|}
-\rowcolor{gray!70}
+\rowcolor{\grisfonce}
+& \multicolumn{4}{c|}{ \cellcolor{\grisfonce} \bfseries  Algorithme d'optimisation} \\
+\hhline{|>{\arrayrulecolor{\grisfonce}}->{\arrayrulecolor{black}}|-|-|-|-|}
+\rowcolor{\grisfonce}
 & \bfseries SLSQP
 & \bfseries GC 
 & \bfseries Neldear-Mead 
 & \bfseries BFGS \\
-\rowcolor{gray!70}
+\rowcolor{\grisfonce}
 \multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Scanners choisis pour l'optimisation}
 & $\tau_N, \qquad \tau_P$
 & $\tau_N, \qquad \tau_P$
@@ -334,7 +335,7 @@ Pour essayer de pallier aux problèmes rencontrés dans la section précédente,
 \scan=scan,\NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG,
 \errNM=errNM,\errBFGS=errBFGS,\errcol=errSLSQP,\errCG=errCG}{%
 \\
-\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 \scan & \begin{tabular}{c}
 \col \\ Err : \errcol
 \end{tabular} & \begin{tabular}{c}
@@ -348,7 +349,7 @@ Pour essayer de pallier aux problèmes rencontrés dans la section précédente,
 \DTLforeach*{optim2_1stat}{%
 \NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG}{%
 \ifthenelse{\value{DTLrowi}=1}{
-\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+\\ \hline \hline %\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 Moyenne : & \col & \CG & \NM & \BFGS }{}%
 \ifthenelse{\value{DTLrowi}=2}{
 \\ \hline Ecart-type : & \col & \CG & \NM & \BFGS }{}%
@@ -379,15 +380,15 @@ Moyenne : & \col & \CG & \NM & \BFGS }{}%
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 %%\hhline{|>{\arrayrulecolor{white}}->{\arrayrulecolor{black}}|-|-|}
-\rowcolor{gray!70}
-& \multicolumn{4}{c|}{ \cellcolor{gray!70} \bfseries  Algorithme d'optimisation} \\
-\hhline{|>{\arrayrulecolor{gray!70}}->{\arrayrulecolor{black}}|-|-|-|-|}
-\rowcolor{gray!70}
+\rowcolor{\grisfonce}
+& \multicolumn{4}{c|}{ \cellcolor{\grisfonce} \bfseries  Algorithme d'optimisation} \\
+\hhline{|>{\arrayrulecolor{\grisfonce}}->{\arrayrulecolor{black}}|-|-|-|-|}
+\rowcolor{\grisfonce}
 & \bfseries SLSQP
 & \bfseries GC 
 & \bfseries Neldear-Mead 
 & \bfseries BFGS \\
-\rowcolor{gray!70}
+\rowcolor{\grisfonce}
 \multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Scanners choisis pour l'optimisation}
 & $\tau_N, \qquad \tau_P$
 & $\tau_N, \qquad \tau_P$
@@ -397,7 +398,7 @@ Moyenne : & \col & \CG & \NM & \BFGS }{}%
 \scan=scan,\NM=NM,\BFGS=BFGS,\col=SLSQP,\CG=CG,
 \errNM=errNM,\errBFGS=errBFGS,\errcol=errSLSQP,\errCG=errCG}{%
 \\
-\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 \scan & \begin{tabular}{c}
 \col \\ Err : \errcol
 \end{tabular} & \begin{tabular}{c}
@@ -478,21 +479,21 @@ Certaines combinaisons d'images fourniraient donc de mauvais résultats, d'autre
 %\begin{tabular}{|c|m{3cm}|}
 %\hline
 %%%\hhline{|>{\arrayrulecolor{white}}->{\arrayrulecolor{black}}|-|-|}
-%\rowcolor{gray!70} & \\
-%\rowcolor{gray!70} &  \\
-%\rowcolor{gray!70}
+%\rowcolor{\grisfonce} & \\
+%\rowcolor{\grisfonce} &  \\
+%\rowcolor{\grisfonce}
 %\multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Scanners choisis pour l'optimisation}
 %& \multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Conditionnement matrice 3x3}
 %\DTLforeach*{optim3_1bcond}{%
 %\scan=scan, \condi=ratio_s}{%
 %\\
-%\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+%\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 %\scan & \condi
 %}%
 %\\ \hline \hline
 %\DTLforeach*{optim3_1gcond}{%
 %\scan=scan, \condi=ratio_s}{%
-%\DTLiffirstrow{}{\\ \DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}} }
+%\DTLiffirstrow{}{\\ \DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}} }
 %\scan & \condi
 %}%
 %\\ \hline
@@ -500,34 +501,34 @@ Certaines combinaisons d'images fourniraient donc de mauvais résultats, d'autre
 %\begin{tabular}{|c|m{3cm}|}
 %\hline
 %%%\hhline{|>{\arrayrulecolor{white}}->{\arrayrulecolor{black}}|-|-|}
-%\rowcolor{gray!70} & \\
-%\rowcolor{gray!70} &  \\
-%\rowcolor{gray!70}
+%\rowcolor{\grisfonce} & \\
+%\rowcolor{\grisfonce} &  \\
+%\rowcolor{\grisfonce}
 %\multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Scanners choisis pour l'optimisation}
 %& \multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Conditionnement matrice 2x2}
 %\DTLforeach*{optim2_1bcond}{%
 %\scan=scan, \condi=ratio_s}{%
 %\\
-%\DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}}%
+%\DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}}%
 %\scan & \condi
 %}%
 %\\ \hline \hline
 %\DTLforeach*{optim2_1gcond}{%
 %\scan=scan, \condi=ratio_s}{%
-%\DTLiffirstrow{}{\\ \DTLifoddrow{\rowcolor{white}}{\rowcolor{gray!40}} }
+%\DTLiffirstrow{}{\\ \DTLifoddrow{\rowcolor{white}}{\rowcolor{\grisclair}} }
 %\scan & \condi
 %}%
 %\\ \hline
 %\end{tabular}
 %%%\vspace{-4cm}
 
-\rowcolors{2}{gray!40}{white}
+\rowcolors{2}{\grisclair}{white}
 \begin{tabular}{|c|m{3cm}|}
 \hline
 %%\hhline{|>{\arrayrulecolor{white}}->{\arrayrulecolor{black}}|-|-|}
-\rowcolor{gray!70} & \\
-\rowcolor{gray!70} &  \\
-\rowcolor{gray!70}
+\rowcolor{\grisfonce} & \\
+\rowcolor{\grisfonce} &  \\
+\rowcolor{\grisfonce}
 \multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Scanners choisis pour l'optimisation}
 & \multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Conditionnement matrice 3x3} \\
 $[2,3,4]$ & 1.5e+07  \\
@@ -544,9 +545,9 @@ $[1,2,9]$ & 2.2e+01 \\ \hline
 \begin{tabular}{|c|m{3cm}|}
 \hline
 %%\hhline{|>{\arrayrulecolor{white}}->{\arrayrulecolor{black}}|-|-|}
-\rowcolor{gray!70} & \\
-\rowcolor{gray!70} &  \\
-\rowcolor{gray!70}
+\rowcolor{\grisfonce} & \\
+\rowcolor{\grisfonce} &  \\
+\rowcolor{\grisfonce}
 \multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Scanners choisis pour l'optimisation}
 & \multirow{-3}{\firstcolwidth}{\scriptsize \bfseries \centering Conditionnement matrice 2x2} \\
 $[2,3]$ & 1.2e+05 \\ \hline \hline
