--- a/manuscrit_G_LEFEBVRE/intro.tex
+++ b/manuscrit_G_LEFEBVRE/intro.tex
@@ -7,6 +7,7 @@
 
 %\lettrine{L}{e} cancer est l'un des plus grand fléau du XXI\ieme %\up{ième} 
 %siècle.  Dans les pays industrialisés, il est la deuxième cause de mortalité derrière les maladies cardio-vasculaires. 
+%\lettrine{LCDMOQ}{e} 
 \lettrine{L}{e} cancer est, dans les pays industrialisés, la deuxième cause de mortalité derrière les maladies cardio-vasculaires. 
 %% http://www.lexpress.fr/actualite/societe/sante/le-cancer-un-fleau-en-plein-essor_1552976.html
 En 2012, l'OMS\footnote{Organisation Mondiale de la Santé} attribuait à cette maladie approximativement 14 millions de nouveaux cas et 8,2 millions de décès~\cite{bernard2014world}. 
